homeworks/dtimchuk/module-3/lesson-10/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dtimchuk-dev
  labels:
    env: development
    owner: dtimchuk
